@@ -20,27 +20,34 @@
 
 #ifdef CAML_INTERNALS
 
-/* Macros to access the stack frame */
+/* Macros to access OCaml stacks */
 
-#ifdef TARGET_power
-#if defined(MODEL_ppc)
-#define Saved_return_address(sp) *((intnat *)((sp) - 4))
-#elif defined(MODEL_ppc64)
-#define Saved_return_address(sp) *((intnat *)((sp) + 16))
-#elif defined(MODEL_ppc64le)
-#define Saved_return_address(sp) *((intnat *)((sp) + 16))
-#else
-#error "TARGET_power: wrong MODEL"
-#endif
-#define Already_scanned(sp, retaddr) ((retaddr) & 1)
-#define Mask_already_scanned(retaddr) ((retaddr) & ~1)
-#define Mark_scanned(sp, retaddr) Saved_return_address(sp) = (retaddr) | 1
-#endif
+/* An OCaml stack is composed of one or several "chunks", each chunk
+   being a sequence of frames (activation records) for ocamlopt-generated
+   functions.
+
+   A chunk terminates when the OCaml code calls into C code
+   (explicitly or to perform garbage collection or signal polling).
+
+   A chunk starts when the program starts, or a fiber is created,
+   or a callback is performed from C to OCaml.
+
+   If [sp] points to the bottom of an OCaml stack,
+   [First_frame(sp)] is the first stack frame of the first chunk of this stack.
+
+   If [sp] points to the special frame for [caml_start_program] or
+   [caml_callback_*], this marks the end of the current chunk.
+   The saved value of [gc_regs] for the previous chunk is in
+   [Saved_gc_regs(sp)], and [Stack_header_size] bytes must be skipped
+   to find the first frame of the next chunk, or to reach the top of the stack.
+*/
 
 #ifdef TARGET_s390x
 #define Wosize_gc_regs (2 + 9 /* int regs */ + 16 /* float regs */)
-#define Saved_return_address(sp) *((intnat *)((sp) - SIZEOF_PTR))
-#define Pop_frame_pointer(sp)
+#define Saved_return_address(sp) *((intnat *)((sp) - 8))
+#define First_frame(sp) ((sp) + 8)
+#define Saved_gc_regs(sp) (*(value **)((sp) + 24))
+#define Stack_header_size 32
 #endif
 
 #ifdef TARGET_amd64
@@ -49,10 +56,12 @@
 #define Wosize_gc_regs (13 /* int regs */ + 16 /* float regs */)
 #define Saved_return_address(sp) *((intnat *)((sp) - 8))
 #ifdef WITH_FRAME_POINTERS
-#define Pop_frame_pointer(sp) (sp) += sizeof(value)
+#define First_frame(sp) ((sp) + 16)
 #else
-#define Pop_frame_pointer(sp)
+#define First_frame(sp) ((sp) + 8)
 #endif
+#define Saved_gc_regs(sp) (*(value **)((sp) + 24))
+#define Stack_header_size 32
 #endif
 
 #ifdef TARGET_arm64
@@ -60,7 +69,9 @@
    See arm64.S and arm64/proc.ml for the indices */
 #define Wosize_gc_regs (2 + 24 /* int regs */ + 24 /* float regs */)
 #define Saved_return_address(sp) *((intnat *)((sp) - 8))
-#define Pop_frame_pointer(sp) sp += sizeof(value)
+#define First_frame(sp) ((sp) + 16)
+#define Saved_gc_regs(sp) (*(value **)((sp) + 24))
+#define Stack_header_size 32
 #endif
 
 #ifdef TARGET_riscv
@@ -68,11 +79,9 @@
    See riscv.S and riscv/proc.ml for the indices */
 #define Wosize_gc_regs (2 + 22 /* int regs */ + 20 /* float regs */)
 #define Saved_return_address(sp) *((intnat *)((sp) - 8))
-/* RISC-V does not use a frame pointer, but requires the stack to be
-   16-aligned, so when pushing the return address to the stack there
-   is an extra word of padding after it that needs to be skipped when
-   walking the stack. */
-#define Pop_frame_pointer(sp) sp += sizeof(value)
+#define First_frame(sp) ((sp) + 16)
+#define Saved_gc_regs(sp) (*(value **)((sp) + 24))
+#define Stack_header_size 32
 #endif
 
 /* Declaration of variables used in the asm code */
