@@ -47,8 +47,8 @@ void caml_garbage_collection(void)
   struct stack_info* stack = dom_st->current_stack;
 
   char * sp = (char*)stack->sp;
-  Pop_frame_pointer(sp);
-  uintnat retaddr = *(uintnat*)sp;
+  sp = First_frame(sp);
+  uintnat retaddr = Saved_return_address(sp);
 
   /* Synchronise for the case when [young_limit] was used to interrupt
      us. */
